Added signalR live messaging

--- a/AngularApp/src/assets/i18n/ba.json
+++ b/AngularApp/src/assets/i18n/ba.json
@@ -38,7 +38,7 @@
     "doctor_name": "Naziv ljekara",
     "specialization_name": "Naziv specijalizacije",
     "contact": "Kontaktiraj",
-    "schedule_appointment": "Zakaži termin",
+    "contact_doctor": "Kontaktiraj ljekara",
     "first_name": "Ime",
     "last_name": "Prezime",
     "your_cart": "Vaša korpa",
