--- a/AngularApp/src/assets/i18n/us.json
+++ b/AngularApp/src/assets/i18n/us.json
@@ -38,7 +38,7 @@
     "doctor_name": "Doctor name",
     "specialization_name": "Specialization",
     "contact": "Contact",
-    "schedule_appointment": "Schedule appointment",
+    "contact_doctor": "Contact doctor",
     "first_name": "First name",
     "last_name": "Last name",
     "your_cart": "Your Cart",
