--- a/AngularApp/src/assets/i18n/us.json
+++ b/AngularApp/src/assets/i18n/us.json
@@ -2,6 +2,10 @@
     "login": "Login",
     "email_address": "Email address",
     "password": "Password",
+    "forgot_password": "Forgot password?",
+    "new_password": "New password",
+    "reset_password": "Reset password",
+    "confirm_new_password": "Confirm new password",
     "remember_me": "Remember me",
     "continue": "Continue",
     "search": "Search",
@@ -64,9 +68,9 @@
     "delete_order": "Delete order",
     "messages": "Messages",
     "unread_messages": "Unread messages",
-    "unread_messages_count": "You have {{ count }} unread messages",
+    "unread_messages_count": "You have unread messages from {{ count }} user",
     "read_messages": "Read messages",
-    "read_messages_count": "You have {{ count }} read messages",
+    "read_messages_count": "You have read messages from {{ count }} user",
     "message": "Message..."
 }
   
