--- a/AngularApp/src/assets/i18n/us.json
+++ b/AngularApp/src/assets/i18n/us.json
@@ -2,11 +2,10 @@
     "login": "Login",
     "email_address": "Email address",
     "password": "Password",
-    "change_password" : "Change password",
-    "old_password" : "Old password",
+    "forgot_password": "Forgot password?",
     "new_password": "New password",
+    "reset_password": "Reset password",
     "confirm_new_password": "Confirm new password",
-    "cancel": "Cancel",
     "remember_me": "Remember me",
     "continue": "Continue",
     "search": "Search",
@@ -74,6 +73,10 @@
     "read_messages": "Read messages",
     "read_messages_count": "You have {{ count }} read messages",
     "read_messages_user_count": "You have read messages from {{ count }} user",
-    "message": "Message..."
+    "message": "Message...",
+    "change_password" : "Change password",
+    "old_password" : "Old password",
+    "new_password" : "New password",
+    "repeat_new_password" : "Repeat new password"
 }
   
